Started implementing the controller and the routes

--- a/src/views/layouts/default.hbs
+++ b/src/views/layouts/default.hbs
@@ -7,19 +7,7 @@
   <title>B1 CRUD</title>
 </head>
 <body>
-<header>
-<h1>The CRUD application</h1>
-</header>
-
-<a href="">Log in</a>
-<a href="">Register</a>
-
-  <nav id="app-links">
-    <a href="">Create</a>
-    <a href="">Read</a>
-    <a href="">Update</a>
-    <a href="">Delete</a>
-  </nav>
-
+  {{>header}}
+  {{{body}}}
 </body>
 </html>
