--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,8 +21,38 @@ a {
 #app-links a {
   background-color: rgb(199, 195, 190);
   padding: 20px 35px;
-  margin: 25px, 0px;
+  margin: 25px 0px;
   text-align: center;
   display: inline-block;
   font-size: 40px;
 }
+
+#log-in-form {
+  padding: 20px 35px;
+  margin: 25px 0px;
+  font-size: 20px;
+}
+
+#log-in-form input {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+input[type=text], input[type=password] {
+  border: 3px solid black;
+  border-radius: 3px;
+  width: 50%;
+  padding: 8px;
+}
+
+#log-in-form input[type=submit] {
+  padding: 10px 20px;
+  border: 3px solid black;
+  margin-top: 20px;
+  border-radius: 3px;
+  font-size: 20px;
+  display: block;
+  
+}
+
+
