--- a/src/views/crud/index.hbs
+++ b/src/views/crud/index.hbs
@@ -1,10 +1,10 @@
 <body>
 
-<a href="">Log in</a>
-<a href="">Register</a>
+<a href="/log-in">Log in</a>
+<a href="/register">Register</a>
 
   <nav id="app-links">
-    <a href="">Create</a>
+    <a href="/create-new">Create</a>
     <a href="">Read</a>
     <a href="">Update</a>
     <a href="">Delete</a>
