--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,13 @@
 body {
   background-color: rgb(232, 217, 221);
   font-family: Georgia, 'Times New Roman', Times, serif;
-  margin: 20px;
+  padding: 20px;
 }
 
-h1 {
+h1 a {
   font-size: 50px;
-  margin: 40px 0px;
+  padding: 0px;
+  background-color: rgb(232, 217, 221);
 }
 
 a {
@@ -52,7 +53,6 @@ input[type=text], input[type=password] {
   border-radius: 3px;
   font-size: 20px;
   display: block;
-  
 }
 
 
