--- a/src/views/crud/index.hbs
+++ b/src/views/crud/index.hbs
@@ -1,14 +1,14 @@
 <body>
-
+<div id="container">
 <a href="/log-in">Log in</a>
 <a href="/register">Register</a>
 
   <nav id="app-links">
     <a href="/create-new">Create</a>
-    <a href="">Read</a>
-    <a href="">Update</a>
-    <a href="">Delete</a>
+    <a href="/read">Read</a>
+    <a href="/update">Update</a>
+    <a href="/delete">Delete</a>
   </nav>
-
+</div>
 </body>
 </html>
