--- a/src/views/register/register.hbs
+++ b/src/views/register/register.hbs
@@ -1,5 +1,6 @@
 <h2>Register an account</h2>
 <div id="log-in-page">
+  {{>validation}}
 <form id="log-in-form" method="post" action="/new-register">
   <input name="username" type="text" placeholder="Enter a username"><br>
   <input name="password" type="password" placeholder="Enter a password">
