Added a page to render when user logged in successfully

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,6 +66,7 @@ input[type=text], input[type=password] {
   color: black;
   background-color: rgb(227, 119, 119);
   font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
   padding: 20px;
   list-style: none;
 }
