Added some error handling in server.js and authorize method in controller

--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -8,7 +8,9 @@
     <a href="/read">Read</a>
     <a href="/update">Update</a>
     <a href="/delete">Delete</a>
+    <a href="/user">User</a>
   </nav>
+
 </div>
 </body>
 </html>
