--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,10 +47,10 @@ input[type=text], input[type=password] {
 }
 
 #log-in-form input[type=submit] {
+  background-color: rgb(199, 195, 190);
   padding: 10px 20px;
-  border: 3px solid black;
+  border: none;
   margin-top: 20px;
-  border-radius: 3px;
   font-size: 20px;
   display: block;
 }
@@ -80,18 +80,14 @@ input[type=text], input[type=password] {
   display: block;
 }
 
-#create input[type=text] {
-  padding: 10px 20px;
-  margin-bottom: 15px;
-  margin-top: 5px;
+label {
+  padding: 5px;
+  display: block;
 }
 
-#snippet-body {
- height: 100px;
+#create input[type="text"] {
+  border: 0.5px solid black;
 }
 
-#snippet-description {
-  height: 100px;
-}
 
 
