--- a/src/views/login/user-page.hbs
+++ b/src/views/login/user-page.hbs
@@ -1,1 +1,10 @@
 <h1>Welcome to your page </h1>
+<form id="log-in-form" method="post" action="/logout">
+  <input type="submit" value="Log out">
+</form>
+  <nav id="app-links">
+    <a href="/create">Create</a>
+    <a href="/read">Read</a>
+    <a href="/update">Update</a>
+    <a href="/delete">Delete</a>
+  </nav>
