--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,7 +46,7 @@ input[type=text], input[type=password] {
   padding: 8px;
 }
 
-#log-in-form input[type=submit] {
+input[type=submit] {
   background-color: rgb(199, 195, 190);
   padding: 10px 20px;
   border: none;
