--- a/src/views/login/user-page.hbs
+++ b/src/views/login/user-page.hbs
@@ -1,5 +1,5 @@
 <h1>Welcome to your page </h1>
-<form id="log-in-form" method="post" action="/logout">
+<form id="log-out-form" method="post" action="/logout">
   <input type="submit" value="Log out">
 </form>
   <nav id="app-links">
