--- a/src/views/crud/read.hbs
+++ b/src/views/crud/read.hbs
@@ -1,7 +1,14 @@
+<div id="code-snippets">
 {{#if viewData.codeSnippets.length}}
+<ul>
 {{#each viewData.codeSnippets}}
+<a href="./{{this.id}}">
 {{this.title}}
+</a>
+<br>
 {{/each}}
+</ul>
 {{else}}
 <p>No code snippets added yet.</p>
 {{/if}}
+</div>
