--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,7 +50,7 @@ input[type=text], input[type=password] {
   padding: 8px;
 }
 
-input[type=submit] {
+input[type=submit], button {
   background-color: rgb(199, 195, 190);
   padding: 10px 20px;
   border: none;
