--- a/src/views/crud/details.hbs
+++ b/src/views/crud/details.hbs
@@ -1,11 +1,10 @@
 <b>{{viewData.title}} </b>
 <br>
 {{viewData.description}}
-{{viewData.id}}
+
+<button><a href="./{{viewData.id}}/edit">Edit</a></button>
 
 <form method="post" action="./{{viewData.id}}/delete">
-<input type="hidden" name="id" value="{{viewData.id}}" />
+<input type="hidden" name="id" value="{{viewData.id}}">
 <input type="submit" value="Delete">
 </form>
-
-<a href="./{{viewData.id}}/remove"></a>
