Added method to show a user's own code snippets on their page

--- a/src/views/login/log-in.hbs
+++ b/src/views/login/log-in.hbs
@@ -1,8 +1,9 @@
 <h2>Log in</h2>
 <div id="log-in-page">
-<form id="log-in-form" method="post" action="/user-page">
+<form id="log-in-form" method="post" action="/login-user">
   <input name="username" type="text" placeholder="Enter your username"><br>
   <input name="password" type="password" placeholder="Enter your password">
   <input type="submit" value="Log in">
 </form>
+
 </div>
