--- a/src/views/login/user-home.hbs
+++ b/src/views/login/user-home.hbs
@@ -3,8 +3,8 @@
   <input type="submit" value="Log out">
 </form>
   <nav id="app-links">
-    <a href="/create">Create</a>
+    <a href="/user-snippets">Your code snippets</a>
     <a href="/read">Read</a>
-    <a href="/update">Update</a>
-    <a href="/delete">Delete</a>
   </nav>
+
+  
