--- a/src/views/login/snippet-changes.hbs
+++ b/src/views/login/snippet-changes.hbs
@@ -2,9 +2,9 @@
 <br>
 {{viewData.description}}
 
-<button><a href="{{viewData.id}}/edit">Edit</a></button>
+<button><a href="./{{viewData.id}}/edit">Edit</a></button>
 
-<form method="post" action="{{viewData.id}}/delete">
+<form method="post" action="./{{viewData.id}}/delete">
 <input type="hidden" name="id" value="{{viewData.id}}">
 <input type="submit" value="Delete">
 </form>
