--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -2,4 +2,9 @@
   <h1>
   <a href="/">The CRUD application </a>
   </h1>
+
+  <div id="container">
+  <a href="../login/log-in">Log in</a>
+  <a href="../login/register">Register</a>
+  </div>
 </header>
