--- a/src/views/login/user-home.hbs
+++ b/src/views/login/user-home.hbs
@@ -1,10 +1,11 @@
 <h1>Welcome to your page </h1>
-<form id="log-out-form" method="post" action="/logout">
+<form id="log-out-form" method="post" action="../login/logout">
   <input type="submit" value="Log out">
 </form>
   <nav id="app-links">
-    <a href="/user-snippets">Your code snippets</a>
-    <a href="/read">Read</a>
+    <a href="../login/user-snippets">Your code snippets</a>
+    <a href="../crud/read">All code snippets</a>
+    <a href="../crud/create">Create new code snippet</a>
   </nav>
 
   
