--- a/src/views/login/user-snippets.hbs
+++ b/src/views/login/user-snippets.hbs
@@ -2,7 +2,7 @@
     {{#if viewData.codeSnippets.length}}
     <ul>
       {{#each viewData.codeSnippets}}
-        <a href="./{{this.id}}">
+        <a href="../crud/{{this.id}}">
         {{this.title}}
       </a>
       <br>
