Made edit and delete button only show if logged in user is the owner of snippet

--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -1,6 +1,6 @@
 <h3>Create a new snippet</h3>
 <div id="create">
-<form id="create-form" method="post" action="/create-new">
+<form id="create-form" method="post" action="../crud/create-new">
 
   <label for="snippetTitle">Title</label>
   <input name="snippetTitle" type="text" id="snippet-tile"><br>
