--- a/src/views/errors/403.html
+++ b/src/views/errors/403.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <h1>404 Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
+    <h1>403 Access denied</h1>
+    <p>Sorry, you don't have permission to do this.</p>
 </body>
 </html>
