--- a/src/views/login/user-home.hbs
+++ b/src/views/login/user-home.hbs
@@ -2,10 +2,12 @@
 <form id="log-out-form" method="post" action="../login/logout">
   <input type="submit" value="Log out">
 </form>
+<div id="user-home-nav">
   <nav id="app-links">
     <a href="../login/user-snippets">Your code snippets</a>
     <a href="../crud/read">All code snippets</a>
     <a href="../crud/create">Create new code snippet</a>
   </nav>
+</div>
 
   
