--- a/src/views/partials/flash.hbs
+++ b/src/views/partials/flash.hbs
@@ -1,5 +1,6 @@
 {{#if flash}}
-  <div id="flash-messages">
+  <div id="flash-messages" class="{{flash.type}}">
+  
    {{flash.text}}
   </div>
 {{/if}}
