--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -3,12 +3,13 @@
 <form id="create-form" method="post" action="../crud/create-new">
 
   <label for="snippetTitle">Title</label>
-  <input name="snippetTitle" type="text" id="snippet-tile"><br>
+  <input name="snippetTitle" type="text" id="snippet-title"><br>
 
   <label for="snippet-description">Description</label>
-  <textarea id="snippet-description" name="snippetDescription" rows="4" cols="50">
-  </textarea>
-
+  <textarea id="snippet-description" name="snippetDescription" rows="4" cols="50"> 
+ 
+  </textarea> 
+ 
   <input type="submit" value="Create">
 </form>
 </div>
