--- a/src/views/login/user-home.hbs
+++ b/src/views/login/user-home.hbs
@@ -1,7 +1,5 @@
-<h1>Welcome to your page </h1>
-<form id="log-out-form" method="post" action="../login/logout">
-  <input type="submit" value="Log out">
-</form>
+<h1>Welcome to your page {{username.username}}!</h1>
+
 <div id="user-home-nav">
   <nav id="app-links">
     <a href="../login/user-snippets">Your code snippets</a>
