--- a/src/views/crud/read.hbs
+++ b/src/views/crud/read.hbs
@@ -1,4 +1,4 @@
-<div id="code-snippets">
+<div id="code-snippets-links">
     {{#if viewData.codeSnippets.length}}
     <ul>
       {{#each viewData.codeSnippets}}
