--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -10,7 +10,7 @@
     <p>Logged in as {{isLoggedIn.username}}</p>
     {{/if}}
 
-  <div id="code-snippets">
+  <div id="code-snippets-links">
     {{#if viewData.codeSnippets.length}}
     <ul>
       {{#each viewData.codeSnippets}}
