--- a/src/views/layouts/default.hbs
+++ b/src/views/layouts/default.hbs
@@ -7,8 +7,10 @@
   <title>B1 CRUD</title>
 </head>
 <body>
-  {{>header}}
-  {{>flash}}
-  {{{body}}}
+  <main id="grid-container">
+    {{>header}}
+    {{>flash}}
+    {{{body}}}
+  </main>
 </body>
 </html>
