--- a/src/views/login/log-in.hbs
+++ b/src/views/login/log-in.hbs
@@ -1,5 +1,5 @@
 <h2>Log in</h2>
-<div id="log-in-page">
+<div id="log-in">
 <form id="log-in-form" method="post" action="../login/login-user">
   <input name="username" type="text" placeholder="Enter your username"><br>
   <input name="password" type="password" placeholder="Enter your password">
