--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -2,11 +2,11 @@
 <div id="create">
 <form id="create-form" method="post" action="../crud/create-new">
 
-  <label for="snippetTitle">Title</label>
-  <input name="snippetTitle" type="text" id="snippet-title"><br>
+  <label for="snippetTitle" class="create-title">Title</label>
+  <input name="snippetTitle" type="text" id="create-title"><br>
 
-  <label for="snippet-description">Description</label>
-  <textarea id="snippet-description" name="snippetDescription" rows="4" cols="50"> 
+  <label for="snippet-description" class="create-desc">Description</label>
+  <textarea id="create-description" name="snippetDescription" rows="4" cols="50"> 
  
   </textarea> 
  
