--- a/src/views/layouts/default.hbs
+++ b/src/views/layouts/default.hbs
@@ -7,7 +7,7 @@
   <title>B1 CRUD</title>
 </head>
 <body>
-  <main id="grid-container">
+  <main id="container">
     {{>header}}
     {{>flash}}
     {{{body}}}
