--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,18 +1,26 @@
 <header>
   <h1>
-  <a href="/">The CRUD application </a>
+    <a href="/">The CRUD application </a>
   </h1>
 
   <div id="header-container">
-    <a href="/">Home</a>
-    {{#if username}}
-      <form id="log-out-form" method="post" action="../login/logout">
-      <input type="submit" value="Logout">
-      </form>
-    {{else}}
-      <a href="../login/register">Register</a>
-      <a href="../login/log-in">Log in</a>
-    {{/if}}
+    
+        {{#if username}}
+        <ul>
+          <li><a class="home" href="/">Home</a></li>
+          <li><a class="user" href="../login/user-home">Your page</a></li>
+          <li><form id="log-out-form" method="post" action="../login/logout">
+          <input type="submit" class="logout" value="Sign out">
+          </form></li>
+        </ul>
+        {{else}}
+        <ul>
+          <li><a class="home" href="/">Home</a></li>
+          <li><a class="register"href="../login/register">Register</a></li>
+          <li><a class="login" href="../login/log-in">Log in</a></li>
+        </ul>
+        {{/if}}
+
   </div>
 
 </header>
