--- a/src/views/login/user-snippets.hbs
+++ b/src/views/login/user-snippets.hbs
@@ -2,10 +2,9 @@
     {{#if viewData.codeSnippets.length}}
     <ul>
       {{#each viewData.codeSnippets}}
-        <a href="../crud/{{this.id}}">
-        {{this.title}}
-      </a>
-      <br>
+        <li>
+        <a href="../crud/{{this.id}}">{{this.title}}</a>
+        </li>
       {{/each}}
     </ul>
       {{else}}
