Fixed flash messages for validation errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -167,10 +167,12 @@ li {
   background-color: rgb(212, 74, 74);
 }
 
-#validation {
+#validation li {
+  background-color: rgb(212, 74, 74);
   color: black;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   padding: 20px;
   list-style: none;
+  margin-bottom: 5px;
 }
