--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -1,6 +1,6 @@
 <h3>Create a new snippet</h3>
 <div id="create">
-<form id="create-form" method="post" action="../crud/create-new">
+<form id="create-form" method="post" action="./crud/create-new">
 
   <label for="snippetTitle" class="create-title">Title</label>
   <input name="snippetTitle" type="text" id="create-title"><br>
