--- a/src/views/crud/read.hbs
+++ b/src/views/crud/read.hbs
@@ -3,7 +3,7 @@
     <ul>
       {{#each viewData.codeSnippets}}
         <li>
-        <a href="../crud/{{this.id}}">
+        <a href="crud/{{this.id}}">
         {{this.title}}
         </a>
         </li>
