--- a/src/views/login/register.hbs
+++ b/src/views/login/register.hbs
@@ -1,7 +1,7 @@
 <h2>Register an account</h2>
 <div id="register">
   {{>validation}}
-<form id="register-form" method="post" action="../login/new-register">
+<form id="register-form" method="post" action="./login/new-register">
   <input name="username" type="text" placeholder="Enter a username"><br>
   <input name="password" type="password" placeholder="Enter a password">
   <input type="submit" value="Register">
