--- a/src/views/crud/edit.hbs
+++ b/src/views/crud/edit.hbs
@@ -1,7 +1,7 @@
 <h3>{{viewData.title}}</h3>
 
 <div id="edit-form">
-<form method="post" action="../{{viewData.id}}/update">
+<form method="post" action="./crud/{{viewData.id}}/update">
 <input type="hidden" name="id" value="{{viewData.id}}" />
 
 <textarea id="snippet-description" name="description" value="{{viewData.description}}" rows="4" cols="50">
