--- a/src/views/login/log-in.hbs
+++ b/src/views/login/log-in.hbs
@@ -1,6 +1,6 @@
 <h2>Log in</h2>
 <div id="log-in">
-<form id="log-in-form" method="post" action="../login/login-user">
+<form id="log-in-form" method="post" action="./login/login-user">
   <input name="username" type="text" placeholder="Enter your username"><br>
   <input name="password" type="password" placeholder="Enter your password">
   <input type="submit" value="Log in">
