--- a/src/views/login/user-snippets.hbs
+++ b/src/views/login/user-snippets.hbs
@@ -3,7 +3,7 @@
     <ul>
       {{#each viewData.codeSnippets}}
         <li>
-        <a href="../crud/{{this.id}}">{{this.title}}</a>
+        <a href="./crud/{{this.id}}">{{this.title}}</a>
         </li>
       {{/each}}
     </ul>
