--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -3,12 +3,10 @@
 <form id="create-form" method="post" action="./crud/create-new">
 
   <label for="snippetTitle" class="create-title">Title</label>
-  <input name="snippetTitle" type="text" id="create-title"><br>
+  <input name="snippetTitle" type="text" id="create-title" placeholder="Code snippet title">
 
   <label for="snippet-description" class="create-desc">Description</label>
-  <textarea id="create-description" name="snippetDescription" rows="4" cols="50"> 
- 
-  </textarea> 
+  <textarea id="create-description" name="snippetDescription" rows="15" cols="70" placeholder="Add a description here."></textarea> 
  
   <input type="submit" value="Create">
 </form>
