Fixed problem with code and pre tags

--- a/src/views/crud/details.hbs
+++ b/src/views/crud/details.hbs
@@ -1,15 +1,9 @@
 <div id="snippet-title">
   <p>{{viewData.title}} </p>
 </div>
-
 <div id="snippet-desc">
-  <pre>
-    <code>
-      {{viewData.description}}
-    </code>
-  </pre>
+  <pre><code>{{viewData.description}}</code></pre>
 </div>
-
 <div>
   {{#if isOwner}}
     <p>Created by you</p>
