--- a/src/views/home/index.hbs
+++ b/src/views/home/index.hbs
@@ -2,7 +2,7 @@
   
 <div id="snippets-container">
   {{#if isLoggedIn.isLoggedIn}}
-    <p>Logged in as {{isLoggedIn.username}}</p>
+    <p>Logged in as {{isLoggedIn.username}}.</p>
     {{/if}}
 
   <div id="code-snippets-links">
