--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,6 @@ body {
   height: auto;
 }
 
-
 header #header-container li {
   display: inline-block;
 }
@@ -69,7 +68,7 @@ a {
   padding: 0;
 }
 
-.create-title, .create-desc {
+.create-title/*, .create-desc*/ {
   font-size: 20px;
   margin-bottom: 5px;
 }
