--- a/src/views/crud/create.hbs
+++ b/src/views/crud/create.hbs
@@ -6,7 +6,7 @@
   <input name="snippetTitle" type="text" id="create-title" placeholder="Code snippet title">
 
   <label for="snippet-description" class="create-desc">Description</label>
-  <textarea id="create-description" name="snippetDescription" rows="15" cols="70" placeholder="Add a description here."></textarea> 
+  <textarea id="create-description" name="snippetDescription" rows="4" cols="50"></textarea> 
  
   <input type="submit" value="Create">
 </form>
