--- a/src/views/crud/edit.hbs
+++ b/src/views/crud/edit.hbs
@@ -4,9 +4,7 @@
     <form method="post" action="./crud/{{viewData.id}}/update">
       <input type="hidden" name="id" value="{{viewData.id}}" />
 
-      <textarea id="snippet-description" name="description" value="{{viewData.description}}" rows="4" cols="50">
-        {{viewData.description}}
-      </textarea>
+      <textarea id="snippet-description" name="description" value="{{viewData.description}}" rows="4" cols="50">{{viewData.description}}</textarea>
 
       <input type="submit" class="update" value="Update">
     </form>
