--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,7 +68,7 @@ a {
   padding: 0;
 }
 
-.create-title/*, .create-desc*/ {
+.create-title, .create-desc {
   font-size: 20px;
   margin-bottom: 5px;
 }
@@ -77,6 +77,7 @@ a {
   background-color: white;
   border: 1px solid black;
   overflow: scroll;
+  height: 400px;
 }
 
 li {
